[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fldplnpy"
version = "0.1.0"
description = "A Python implementation of the MATLAB FLDPLN algorithm found at https://github.com/AlabamaWaterInstitute/fldpln."
authors = [
    { name = "L. Ricardo Rosas", email = "louisrickyrosas@gmail.com" }
]
dependencies = [
    "numba",
    "pandas"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

